[base] Enable Process::CreationTime() on Android for "self".

We get the process creation time on Linux by reading /proc/PID/stat. On
Android, this is allowed if PID == "self". Make the code allow that.

Change-Id: Ib2d41f3c361c3d632cae450e79c1e3d6bcafa60a
Bug: 691874
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2379743
Reviewed-by: François Doray <fdoray@chromium.org>
Commit-Queue: Benoit L <lizeb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#803120}