base/process/process.h
@@ -99,15 +99,14 @@ class BASE_EXPORT Process {
   // Get the PID for this process.
   ProcessId Pid() const;
 
-#if !defined(OS_ANDROID)
   // Get the creation time for this process. Since the Pid can be reused after a
   // process dies, it is useful to use both the Pid and the creation time to
   // uniquely identify a process.
   //
-  // Not available on Android because /proc/stat/ cannot be accessed on O+.
-  // https://issuetracker.google.com/issues/37140047
+  // On Android, works only if |this| is the current process, as security
+  // features prevent an application from getting data about other processes,
+  // even if they belong to us. Otherwise, returns Time().
   Time CreationTime() const;
-#endif  // !defined(OS_ANDROID)
 
   // Returns true if this process is the current process.
   bool is_current() const;
